--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,6 +176,11 @@
     transform: translateY(5px);
   }
   
+  .content {
+    max-width: 500px;
+    margin: auto;
+  }
+
   .column {
     float: left;
   }
