--- a/templates/forbidden.html
+++ b/templates/forbidden.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client</title>
-    <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
+    <title>Document</title>
 </head>
 <body>
-    <h1>SafeStore</h1>
-
     
 </body>
 </html>
