--- a/templates/password.html
+++ b/templates/password.html
@@ -34,11 +34,32 @@
 
 
     <h2>Generate Password</h2>
+    <h3>Your New Password</h3>
+    <input type="text" value="{{generated_password}}" id="generated_password" disabled>
+    <button onclick="copyText()" id="copy_button">Click to Copy</button>
+
+    <script>
+        function copyText() {
+            var copyText = document.getElementById("generated_password");
+            copyText.select();
+            copyText.setSelectionRange(0, 99999);
+
+            navigator.clipboard.writeText(copyText.value);
+            
+            const button = document.getElementById("copy_button");
+            button.textContent = "Password Copied!";
+        }
+    </script>
+
+    <br>
+    <br>
+
+    <h3>Generate A Different Password</h3>
     Specify your password type:
 
     <br>
     <br>
-    
+
     <form method="POST" action="/password">
 
         Length:
