premium page frontend added

--- a/templates/bugchecker.html
+++ b/templates/bugchecker.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>SafeStore</h1>
+    <h1>SafeStore Premium</h1>
 
     <h2>Malware Checker</h2>
     <p>Our malware checker will... [ADD DESCRIPTION]</p>
@@ -19,7 +19,26 @@
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
-      </form>
+    </form>
+
+    <h2>File Store</h2>
+    <p>Safely store and encrypt your files with us.</p>
+
+    <br>
+    <form action = "http://localhost:8000/uploader" method = "POST"  
+         enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+         <input type = "submit"/>
+    </form>
+
+    <h2>File Retrieve</h2>
+    <p>Securely retrieve your files.</p>
+
+    <form action="">
+        <input type="text" name="fileName" id="fileName" placeholder="Enter file name" />
+        <button type="submit">Submit</button>
+    </form>
+
    </body>
 
 </body>
