--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,17 @@
     </form>
 
     <br>
+
+    <h2>File Store and Bug Checker</h2>
+    <p>For premium members only.</p>
+    <form action="/upload">
+        <button type="submit">Let's Go!</button>
+    </form>
+
+
+
+
+
     <p>
         <a href="{{ url_for('home') }}">Home</a> 
 
