connect virus checker

--- a/templates/scannedfile.html
+++ b/templates/scannedfile.html
@@ -12,6 +12,11 @@
     <h1>SafeStore Premium</h1>
 
     <h2>Malware Checker</h2>
+    <h3>Your File Results</h3>
+    <p>For the file: {{filename}}</p>
+    <p><i>{{res_text}}</i></p>
+
+    <h3>Scan Another File</h3>
     <p>Select a file to upload, and we will check if the file is safe or contains a hidden virus</p>
 
     <br>
