--- a/templates/password.html
+++ b/templates/password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client</title>
+    <title>SafeStore</title>
     <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
 </head>
 <body>
@@ -17,6 +17,9 @@
 
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
+        <br>
+        <br>
+        
         {% else %}
         <h3>Welcome {{current_user.username}}!</h3>
         
@@ -59,7 +62,7 @@
 
     <br>
     <br>
-
+    
     <form method="POST" action="/password">
 
         Length:
@@ -111,11 +114,27 @@
 
     <h2>File Store and Bug Checker</h2>
     <p>For premium members only.</p>
-    <form action="/upload">
+
+    {% if current_user.is_anonymous %}
+
+        <p style="color: grey;"> <i> Upgrade to premium to access. <i> </p>
+
+    {% elif current_user.paying == 0 %}
+    
+        <p style="color: grey;"> <i> Upgrade to premium to access. </i> </p>
+
+    {% else %}
+
+    <form action="/premium">
         <button type="submit">Let's Go!</button>
     </form>
 
-    
+    {% endif %}
+
+    <br>
+
+
+
     <p>
         <a href="{{ url_for('home') }}">Home</a> 
 
