store and retrieve routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
     Save passwords for all your apps
     <br>
     <br>
-    <form action="/storefile">
+    <form action="/storepassword">
         <input type="text" name="appName" id="appName" placeholder="Enter app name" />
         <input type="text" name="password" id="password" placeholder="Enter password" />
         <button type="submit">Submit</button>
@@ -84,7 +84,7 @@
     Retrieve all your stored passwords
     <br>
     <br>
-    <form action="/storefile">
+    <form action="/retrievepassword">
         <input type="text" name="appName" id="appName" placeholder="Enter app name" />
         <button type="submit">Submit</button>
     </form>
