Add store and get pages

--- a/templates/getpassword.html
+++ b/templates/getpassword.html
@@ -81,6 +81,9 @@
     <br>
 
     <h2>Get Password</h2>
+    <h3>Your password for {{appName}}</h3>
+    <p>{{password}}</p>
+    <h3>Get Another Password</h3>
     Retrieve all your stored passwords
     <br>
     <br>
