Add post method

--- a/templates/password.html
+++ b/templates/password.html
@@ -93,7 +93,7 @@
     Save passwords for all your apps
     <br>
     <br>
-    <form action="/storefile">
+    <form method="POST" action="/storefile">
         <input type="text" name="appName" id="appName" placeholder="Enter app name" />
         <input type="text" name="password" id="password" placeholder="Enter password" />
         <button type="submit">Submit</button>
@@ -105,7 +105,7 @@
     Retrieve all your stored passwords
     <br>
     <br>
-    <form action="/storefile">
+    <form method="POST" action="/storefile">
         <input type="text" name="appName" id="appName" placeholder="Enter app name" />
         <button type="submit">Submit</button>
     </form>
