STORE PASSWORD WORKS

--- a/templates/getpassword.html
+++ b/templates/getpassword.html
@@ -81,8 +81,22 @@
     <br>
 
     <h2>Get Password</h2>
-    <h3>Your password for {{appName}}</h3>
-    <p>{{password}}</p>
+    <h3>Here is your password for {{appName}}</h3>
+    <input type="text" value="{{password}}" id="generated_password" disabled>
+    <button onclick="copyText()" id="copy_button">Click to Copy</button>
+
+    <script>
+        function copyText() {
+            var copyText = document.getElementById("generated_password");
+            copyText.select();
+            copyText.setSelectionRange(0, 99999);
+
+            navigator.clipboard.writeText(copyText.value);
+            
+            const button = document.getElementById("copy_button");
+            button.textContent = "Password Copied!";
+        }
+    </script>
     <h3>Get Another Password</h3>
     Retrieve all your stored passwords
     <br>
