--- a/templates/storepassword.html
+++ b/templates/storepassword.html
@@ -69,8 +69,8 @@
     <br>
 
     <h2>Store Password</h2>
-    <h3>Your password for {{appName}}</h3>
-    <p>{{store_success}}</p>
+    <h3>We got your password for {{appName}}!</h3>
+    <p>Storage Status: {{store_success}}</p>
     <h3>Store another password</h3>
     Save passwords for all your apps
     <br>
