--- a/templates/getpassword.html
+++ b/templates/getpassword.html
@@ -81,28 +81,34 @@
     <br>
 
     <h2>Get Password</h2>
-    <h3>Here is your password for {{appName}}</h3>
-    <input type="text" value="{{password}}" id="generated_password" disabled>
-    <button onclick="copyText()" id="copy_button">Click to Copy</button>
+    {% if found %}
+        <h3>Here is your password for {{appName}}</h3>
+        <input type="text" value="{{retrieved_password}}" id="retrieved_password" disabled>
+        <button onclick="copyText()" id="copy_button">Click to Copy</button>
 
-    <script>
-        function copyText() {
-            var copyText = document.getElementById("generated_password");
-            copyText.select();
-            copyText.setSelectionRange(0, 99999);
+        <script>
+            function copyText() {
+                var copyText = document.getElementById("generated_password");
+                copyText.select();
+                copyText.setSelectionRange(0, 99999);
 
-            navigator.clipboard.writeText(copyText.value);
-            
-            const button = document.getElementById("copy_button");
-            button.textContent = "Password Copied!";
-        }
-    </script>
+                navigator.clipboard.writeText(copyText.value);
+                
+                const button = document.getElementById("copy_button");
+                button.textContent = "Password Copied!";
+            }
+        </script>
+    {% else %}
+        <h3>Whoops!</h3>
+        <p>You don't have a password stored yet for {{appName}}. Please use the Store Password above to store it!</p>
+    {% endif %}
+    
     <h3>Get Another Password</h3>
     Retrieve all your stored passwords
     <br>
     <br>
     <form method="POST" action="/retrievepassword">
-        <input type="text" name="appName" id="appName" placeholder="Enter app name" />
+        <input type="text" name="appName" placeholder="Enter app name" />
         <button type="submit">Submit</button>
     </form>
 
@@ -113,7 +119,7 @@
 
     {% if current_user.is_anonymous %}
 
-        <p style="color: grey;"> <i> Upgrade to premium to access. <i> </p>
+        <p style="color: grey;"> <i> Upgrade to premium to access. </i> </p>
 
     {% elif current_user.paying == 0 %}
     
@@ -145,7 +151,7 @@
 
 <div class="column">
     <div class="gmaimg">
-<img src="{{ url_for('static', filename="grandma.jpeg")}}" alt="Cartoon family"/>
+<img src="{{ url_for('static', filename='grandma.jpeg')}}" alt="Cartoon family"/>
     </div>
 </div>
 </div>
