--- a/templates/storepassword.html
+++ b/templates/storepassword.html
@@ -88,7 +88,7 @@
     <br>
     <br>
     <form method="POST" action="/retrievepassword">
-        <input type="text" name="appName" id="appName" placeholder="Enter app name" />
+        <input type="text" name="appName" placeholder="Enter app name" />
         <button type="submit">Submit</button>
     </form>
 
@@ -99,7 +99,7 @@
 
     {% if current_user.is_anonymous %}
 
-        <p style="color: grey;"> <i> Upgrade to premium to access. <i> </p>
+        <p style="color: grey;"> <i> Upgrade to premium to access. </i> </p>
 
     {% elif current_user.paying == 0 %}
     
@@ -131,7 +131,7 @@
 
 <div class="column">
     <div class="gmaimg">
-<img src="{{ url_for('static', filename="grandma.jpeg")}}" alt="Cartoon family"/>
+<img src="{{ url_for('static', filename='grandma.jpeg')}}" alt="Cartoon family"/>
     </div>
 </div>
 </div>
