--- a/templates/storefile.html
+++ b/templates/storefile.html
@@ -22,10 +22,15 @@
     </form>
 
     <h2>File Store</h2>
+    <h3>We got your file {{filename}}!</h3>
+    <p>Storage Status: {{store_success}}</p>
+
+    <h3>Store Another File</h3>
     <p>Safely store and encrypt your files with us.</p>
 
     <br>
-    <form action = "/storefile" method = "POST" enctype = "multipart/form-data">
+    <form action = "/storefile" method = "POST"  
+         enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type="submit" name="file_store" value="Store File"/>
     </form>
