get password fixed yay

--- a/templates/getpassword.html
+++ b/templates/getpassword.html
@@ -88,16 +88,18 @@
 
         <script>
             function copyText() {
-                var copyText = document.getElementById("generated_password");
+                var copyText = document.getElementById("retrieved_password");
                 copyText.select();
                 copyText.setSelectionRange(0, 99999);
-
+    
                 navigator.clipboard.writeText(copyText.value);
                 
                 const button = document.getElementById("copy_button");
                 button.textContent = "Password Copied!";
             }
         </script>
+
+        <p>Please click the button above to copy the password and paste it into {{appName}} with CTRL + V.</p>
     {% else %}
         <h3>Whoops!</h3>
         <p>You don't have a password stored yet for {{appName}}. Please use the Store Password above to store it!</p>
