--- a/templates/store.html
+++ b/templates/store.html
@@ -82,7 +82,7 @@
     <br>
     <br>
     <form action="/storefile">
-        <input type="text" name="appName" id="appName" placeholder="Enter app name" />
+        <input type="text" name="appName" placeholder="Enter app name" />
         <button type="submit">Submit</button>
     </form>
 
@@ -101,7 +101,7 @@
 
 <div class="column">
     <div class="gmaimg">
-<img src="{{ url_for('static', filename="grandma.jpeg")}}" alt="Cartoon family"/>
+<img src="{{ url_for('static', filename='grandma.jpeg')}}" alt="Cartoon family"/>
     </div>
 </div>
 </div>
