--- a/templates/scannedfile.html
+++ b/templates/scannedfile.html
@@ -22,7 +22,7 @@
     <br>
     <form action = "/viruscheck" method = "POST" 
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
+         <input accept=".txt" type = "file" name = "file" />
          <input type="submit" name="virus_check" value="Check File"/>
     </form>
 
@@ -32,7 +32,7 @@
     <br>
     <form action = "http://localhost:8000/uploader" method = "POST"  
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
+         <input accept=".txt" type = "file" name = "file" />
          <input type="submit" name="file_store" value="Store File"/>
     </form>
 
