--- a/templates/storefile.html
+++ b/templates/storefile.html
@@ -17,7 +17,7 @@
     <br>
     <form action = "/viruscheck" method = "POST" 
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
+         <input accept=".txt" type = "file" name = "file" />
          <input type="submit" name="virus_check" value="Check File"/>
     </form>
 
@@ -31,7 +31,7 @@
     <br>
     <form action = "/storefile" method = "POST"  
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
+         <input accept=".txt" type = "file" name = "file" />
          <input type="submit" name="file_store" value="Store File"/>
     </form>
 
